--- a/index.html
+++ b/index.html
@@ -158,25 +158,23 @@
 			</td>
 	</tr>
 </table>
-<section id="egg">
-	<div>
-		<div id="you">
-			<div class="ml60">Try something fun and different today:</div>
-				<div class="ml30">
-					What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology">your numerology numbers</a>... and how does my friend Sally interpret them?
-				</div>
-				<div class="ml30">I'm a 
-					<div class="num c7"><span>7</span>
-					</div>
-				</div>
-			<div class="ml0"><br>
-				Maybe treat yourself with some of my favorite european graphic novels.
-				You can now find them on Amazon (compiled into single books and translated to English).<br>
-				<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
+<div id="egg">
+	<div id="you">
+		<div class="ml60">Try something fun and different today:</div>
+			<div class="ml30">
+				What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology">your numerology numbers</a>... and how does my friend Sally interpret them?
 			</div>
+			<div class="ml30">I'm a 
+				<div class="num c7"><span>7</span>
+				</div>
+			</div>
+		<div class="ml0"><br>
+			Maybe treat yourself with some of my favorite european graphic novels.
+			You can now find them on Amazon (compiled into single books and translated to English).<br>
+			<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
 		</div>
 	</div>
-</section>
+</div>
 
 <div class="bottomSpace"></div>
 
