--- a/hang.html
+++ b/hang.html
@@ -26,19 +26,19 @@
     <p>A flying-saucer looking drum with a wonderful sound...</p>
 
     <div class="cards">
+        <div>Davide Swarup at TEDxSalford<br/>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hLvnrjbdXKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <div>Hang Massive - Once Again<br/>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xk3BvNLeNgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div>Sam Maher - New York Handpan<br/>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6oremFnbgO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div>Davide Swarup at TEDxSalford<br/>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hLvnrjbdXKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
         <div>Laura Inserra - Live Improv.<br/>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pWWKsCMLOho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div>David Charrier - Lafa - Handpan music<br/>
+        <div>David Charrier - Lafa<br/>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Uj-kHy5b5mo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
