--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			in <a class="extlink" href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 			</p>
 			
-			<p>I am very interested in metadata and generic code (usually found in model-driven architecture, low-code platforms, and data visualization...).
+			<p>I am very interested in metadata and generic code (usually found in model-driven architecture, low-code platforms, and data visualization).
 			I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-server-node">backend</a>.</p>
 
 		</td>
@@ -111,10 +111,10 @@
 	<tr id="fractals" class="c4">
 		<td><span class="sTitle">Inspiration</span></td>
 		<td class="pad">
-			<p>I like to look at <a class="extlink" target="_blank" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a class="extlink" target="_blank" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
+			<p>I like to look at <a class="extlink" target="_blank" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a class="extlink" target="_blank" href="https://thesecularheretic.com/fields-of-being-on-morphic-resonance/">morphic resonance</a>.</p>
 			<div id="fractals2" class="pixGroup smallPix"></div>
 
-			<p>I also like visual art made by humans. <span class="grey">... and it often contains fractals.</span></p>
+			<p>I also like visual art made by humans... and it often contains fractals or the golden number.</p>
 
 			<div id="art2" class="pixGroup smallPix"></div>
 
