--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 			<div id="recipes2" class="pixGroup evolPix"></div>
 
-			<p>I recently started experimenting with <a href="https://evoluteur.github.io/madeleinology/madeleines-salty.html">salty madeleines</a>. 
+			<p>I sometimes experiment with <a href="https://evoluteur.github.io/madeleinology/madeleines-salty.html">salty madeleines</a>. 
 				Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.
 			</p>
 
