--- a/hang.html
+++ b/hang.html
@@ -2,28 +2,30 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-	<title>Hang (handpan)</title>
+	<title>Handpan</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link rel="icon" type="image/png" href="favicon.png" />
 	<link href="css/me.css" rel="stylesheet" /> 
-	<meta name="keywords" content="hang handpan music instrument" />
-	<meta name="description" content="Some of my favorite Hang Music videos" />
+	<meta name="keywords" content="hang handpan music instrument drum" />
+	<meta name="description" content="Some of my favorite Handpan performers" />
 </head>
 
 <body>
 
 <div class="nav">
-	<a href="index.html">Evoluteur</a> > Hang
+	<a href="index.html">Evoluteur</a> > Handpan
 </div>
 
 <section class="c00"> 
 
-	<h2>Hang (handpan)</h2>
+	<h2>Handpan</h2>
 
-    <p>A flying-saucer looking drum with a wonderful sound...</p>
+    <p>Invented in 2001, the handpan is a flying-saucer looking metalic drum with a wonderful sound...</p>
+    <p>I will spare you my playing. Here is what it sounds like when played by pros.</p>
+
 
     <div class="cards">
         <div>Davide Swarup at TEDxSalford<br/>
