--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 			<p>I like to cook (and eat), especially desserts. My specialties are 
 				<a href="recipes/desserts/creme-brulee.html">crèmes brûlées</a>,
 				<a href="recipes/desserts/pear-cream-tart.html">pear cream tart</a>, and
-				<a href="recipes/desserts/madeleines.html">madeleines</a>.
-				I'm learning to make <a href="recipes/desserts/canneles.html">cannelés</a>.</p>
+				<a href="recipes/desserts/madeleines.html">madeleines</a>.</p>
 
 			<div id="recipes2" class="pixGroup evolPix"></div>
 
@@ -103,6 +102,12 @@
 				Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.
 			</p>
 
+			<p>Lately, I'm learning to make <a href="recipes/desserts/canneles.html">cannelés</a>.</p>
+			<div id="recipes_learning2" class="pixGroup evolPix">
+				<div class="pixTitleHolder"><a href="recipes/desserts/canneles.html"><img src="pix/recipes/canneles.jpg"><div class="pixTitle">Cannelés</div></a></div>
+				<div class="clearer"></div>
+			</div>
+			
 			<p></p>
 		</td>
 	</tr>
