--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
 		<td><span class="sTitle">Code</span></td>
 		<td class="pad">
 			<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups.</p>
+			
+			<p>I am very interested in metadata and model-driven architecture (usually found in code generators, low-code platforms, and data visualization).
+			I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-server-node">backend</a>, 
+			as well as other little side-projects.</p>
+
+			
 			<div id="code2" class="pixGroup evolPix"></div>
 
 			<p>My favorite quote about programming is 
@@ -82,9 +88,6 @@
 			in <a class="extlink" href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 			</p>
 			
-			<p>I am very interested in metadata and generic code (usually found in model-driven architecture, low-code platforms, and data visualization).
-			I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-server-node">backend</a>.</p>
-
 		</td>
 	</tr>
 </table>
