--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups.</p>
 			
 			<p>I am very interested in metadata and model-driven architecture (usually found in code generators, low-code platforms, and data visualization).
-			I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" href="https://github.com/evoluteur/evolutility-server-node">backend</a>, 
+			I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" rel="noopener" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" rel="noopener" href="https://github.com/evoluteur/evolutility-server-node">backend</a>, 
 			as well as other little side-projects.</p>
 
 			
@@ -119,7 +119,7 @@
 	<tr id="fractals" class="c4">
 		<td><span class="sTitle">Inspiration</span></td>
 		<td class="pad">
-			<p>I like to look at <a class="extlink" target="_blank" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a class="extlink" target="_blank" href="https://thesecularheretic.com/fields-of-being-on-morphic-resonance/">morphic resonance</a>.</p>
+			<p>I like to look at <a class="extlink" target="_blank" rel="noopener" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a class="extlink" target="_blank" href="https://thesecularheretic.com/fields-of-being-on-morphic-resonance/">morphic resonance</a>.</p>
 			<div id="fractals2" class="pixGroup smallPix"></div>
 
 			<p>I also like visual art made by humans... and it often contains fractals or the golden number.</p>
@@ -128,7 +128,7 @@
 
 			<p></p>
 
-			<p>I recently learned that <a class="extlink" target="ted" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art">old books could be reborn as art</a>, and I liked the idea, so I'm giving <a href="book-carving.html">a try at book carving</a>.</p>
+			<p>I recently learned that <a class="extlink" target="ted" rel="noopener" href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art">old books could be reborn as art</a>, and I liked the idea, so I'm giving <a href="book-carving.html">a try at book carving</a>.</p>
 			
 		</td>
 	</tr>
@@ -159,7 +159,7 @@
 	<tr id="chakras" class="c1">
 		<td><span class="sTitle">Meditation</span></td>
 		<td class="pad">
-			<p>I like to meditate and to make <a class="extlink" target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
+			<p>I like to meditate and to make <a class="extlink" target="_blank" rel="noopener" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
 			<div id="chakras2" class="pixGroup chakraPix"></div>
 			<p>I'm learning to play the
 			<a href="hang.html">handpan</a>.</p>
@@ -170,7 +170,7 @@
 	<div id="you">
 		<div class="ml60">Try something fun and different today:</div>
 			<div class="ml30">
-				What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology">your numerology numbers</a>... and how does my friend Sally interpret them?
+				What are <a href="https://evoluteur.github.io/motivational-numerology/" class="extlink" target="numerology" rel="noopener">your numerology numbers</a>... and how does my friend Sally interpret them?
 			</div>
 			<div class="ml30">I'm a 
 				<div class="num c7"><span>7</span>
