--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -59,7 +59,7 @@
 	<li>Add the cream, the milk and the vanilla.</li>
 	<li>Pour in ramekins.</li>
 	<li>(optionally) Add fruit in some ramekins.</li>
-	<li>Prepare "<a class="extlink" target="bm" href="https://en.wikipedia.org/wiki/Bain-marie">bain-marie</a>": fill a long baking dish 1/3 with water and put the ramekins in it (the water should not go in the ramekins).</li>
+	<li>Prepare "<a class="extlink" target="bm" rel="noopener" href="https://en.wikipedia.org/wiki/Bain-marie">bain-marie</a>": fill a long baking dish 1/3 with water and put the ramekins in it (the water should not go in the ramekins).</li>
 	<li>Bake for about 1 hour depending on your oven (they are cooked when firm but not hard).</li>
 	<li>Let cool down and put in the fridge for a few hours (they will be harder when cold).</li>
 </ol>
@@ -67,7 +67,7 @@
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/creme-brulee-bernzomatic.jpg"></div>
 <p>Instructions for burning the caramel crust (just before serving):
 
-<ol>Using a torch (I personaly use a <a class="extlink" target="b" href="http://www.bernzomatic.com/">Bernzomatic</a>):
+<ol>Using a torch (I personaly use a <a class="extlink" target="b" rel="noopener" href="http://www.bernzomatic.com/">Bernzomatic</a>):
 	<li>Put some brown sugar on the cold custard.</li>
 	<li>Put the flame on the brown sugar (not too close) and it will melt into caramel.</li>
 </ol>
@@ -82,7 +82,7 @@
 
 <p>Notes: 
 <ul>
-	<li>Great w/ <a class="extlink" target="wine" href="https://en.wikipedia.org/wiki/Sauternes_(wine)">Sauterne wine</a>.</li>
+	<li>Great w/ <a class="extlink" target="wine" rel="noopener" href="https://en.wikipedia.org/wiki/Sauternes_(wine)">Sauterne wine</a>.</li>
 	<li>Replace heavy whip cream by half-and-half for a lighter version.</li>
 </ul>
 </p>
