--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -70,13 +70,13 @@
 	<div class="clearer"></div>
 </div> 
 
-	<p>Melted chocolate = <a class="extlink" target="_blank" href="https://smile.amazon.com/Ghirardelli-Chocolate-Bittersweet-Baking-Chips/dp/B005HZM6UU">Ghirardelli chocolate bittersweet baking chips</a> and a little bit of heavy whipping cream <a class="extlink" target="_blank" href="https://en.wikipedia.org/wiki/Bain-marie">au bain Marie</a>.</p>
+	<p>Melted chocolate = <a class="extlink" target="_blank" rel="noopener" href="https://smile.amazon.com/Ghirardelli-Chocolate-Bittersweet-Baking-Chips/dp/B005HZM6UU">Ghirardelli chocolate bittersweet baking chips</a> and a little bit of heavy whipping cream <a class="extlink" target="_blank" href="https://en.wikipedia.org/wiki/Bain-marie">au bain Marie</a>.</p>
 
 	<p>When prep time is an issue, I simply have  
-		<a class="extlink" target="_blank" href="http://threetwinsicecream.com/products/ice-cream/lemon-cookie/">ThreeTwins lemon cookie</a>, 
-		<a class="extlink" target="_blank" href="http://www.humphryslocombe.com/">Humphry Slocombe vietnamese coffee</a>,
+		<a class="extlink" target="_blank" rel="noopener" href="http://threetwinsicecream.com/products/ice-cream/lemon-cookie/">ThreeTwins lemon cookie</a>, 
+		<a class="extlink" target="_blank" rel="noopener" href="http://www.humphryslocombe.com/">Humphry Slocombe vietnamese coffee</a>,
 		or
-		<a class="extlink" target="_blank" href="http://www.honeymoonbrands.com">Honeymoon southern pecan</a>.
+		<a class="extlink" target="_blank" rel="noopener" href="http://www.honeymoonbrands.com">Honeymoon southern pecan</a>.
 	</p>
 
 </section>
