--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 					<img src="pix/olivier/og-handlebar.jpg" onclick="switchPix(this)">
 				</div>
 				<span class="sociallinks">
-					<a href="https://github.com/evoluteur" rel="noopener"><img src="pix/social/git.gif" alt="GitHub" /></a>
-					<a href="https://www.linkedin.com/in/giulieri" rel="noopener"><img src="pix/social/in.gif" alt="LinkedIn" /></a>
-					<a href="https://www.npmjs.com/~evoluteur" rel="noopener"><img src="pix/social/npm.gif" alt="NPM" /></a>
-					<a href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212" rel="noopener"><img src="pix/social/cp.gif" alt="CodeProject" /></a>
-					<a href="https://www.pinterest.com/evoluteur/" rel="noopener"><img src="pix/social/pin.gif" alt="Pinterest" /></a> 
-					<a href="https://twitter.com/evoluteur" rel="noopener"><img src="pix/social/tw.gif" alt="Twitter" /></a>
+					<a href="https://github.com/evoluteur"><img src="pix/social/git.gif" alt="GitHub" /></a>
+					<a href="https://www.linkedin.com/in/giulieri"><img src="pix/social/in.gif" alt="LinkedIn" /></a>
+					<a href="https://www.npmjs.com/~evoluteur"><img src="pix/social/npm.gif" alt="NPM" /></a>
+					<a href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212"><img src="pix/social/cp.gif" alt="CodeProject" /></a>
+					<a href="https://www.pinterest.com/evoluteur/"><img src="pix/social/pin.gif" alt="Pinterest" /></a> 
+					<a href="https://twitter.com/evoluteur"><img src="pix/social/tw.gif" alt="Twitter" /></a>
 				</span>
 			</div>
 		</div>
@@ -63,7 +63,7 @@
 
 				<p>I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.
 				I work in Tech. I'm French.</p>
-				<p>I hope you will find this page a more fun and personal way to meet me than my <a href="https://www.linkedin.com/in/giulieri" rel="noopener">LinkedIn</a> and <a href="https://github.com/evoluteur" rel="noopener">GitHub</a> profiles.</p>
+				<p>I hope you will find this page a more fun and personal way to meet me than my <a href="https://www.linkedin.com/in/giulieri">LinkedIn</a> and <a href="https://github.com/evoluteur">GitHub</a> profiles.</p>
 			</div>		
 		</div>
 	</div>
@@ -101,7 +101,7 @@
 
 			<div id="recipes2" class="pixGroup evolPix"></div>
 
-			<p>I sometimes experiment with <a href="https://evoluteur.github.io/madeleinology/madeleines-salty.html" rel="noopener">salty madeleines</a>. 
+			<p>I sometimes experiment with <a href="https://evoluteur.github.io/madeleinology/madeleines-salty.html">salty madeleines</a>. 
 				Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.
 			</p>
 
@@ -119,7 +119,7 @@
 	<tr id="fractals" class="c4">
 		<td><span class="sTitle">Inspiration</span></td>
 		<td class="pad">
-			<p>I like to look at <a class="extlink" target="_blank" rel="noopener" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a class="extlink" target="_blank" href="https://thesecularheretic.com/fields-of-being-on-morphic-resonance/">morphic resonance</a>.</p>
+			<p>I like to look at <a class="extlink" target="_blank" rel="noopener" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a class="extlink" target="_blank" rel="noopener" href="https://thesecularheretic.com/fields-of-being-on-morphic-resonance/">morphic resonance</a>.</p>
 			<div id="fractals2" class="pixGroup smallPix"></div>
 
 			<p>I also like visual art made by humans... and it often contains fractals or the golden number.</p>
