Added theme color meta tag.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<title>Hello world!</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-
-    <link rel="icon" type="image/png" href="favicon.png" />
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#bbdefb" />
+	<link rel="icon" type="image/png" href="favicon.png" />
 	<link href="css/me.css" rel="stylesheet" />
 	<script src="js/me.js"></script>
 
@@ -76,7 +76,7 @@
 			
 			<p>I am very interested in metadata and model-driven architecture (usually found in code generators, low-code platforms, and data visualization).
 			I experiment with my open-source project Evolutility model-driven <a class="extlink" target="_blank" rel="noopener" href="https://github.com/evoluteur/evolutility-ui-react">UI</a> and <a class="extlink" target="_blank" rel="noopener" href="https://github.com/evoluteur/evolutility-server-node">backend</a>, 
-			as well as other little side-projects.</p>
+			as well as other side-projects.</p>
 
 			
 			<div id="code2" class="pixGroup evolPix"></div>
