--- a/recipes/desserts/canneles.html
+++ b/recipes/desserts/canneles.html
@@ -3,9 +3,12 @@
 <head>
 <title>Cannelés recipe</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#bbdefb" />
 	<link href="../../css/me.css" rel="stylesheet" />
 	<meta name="keywords" content="french homemade canneles caneles cake recipe" />
-	<meta name="description" content="Canneles recipe" />
+	<meta name="description" content="Cannelés recipe" />
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
