--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>404 - Page not found</title>
+    <title>404 - Page not found</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-
+    <meta name="theme-color" content="#bbdefb" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="css/me.css" rel="stylesheet" />
     <style>
