--- a/book-carving.html
+++ b/book-carving.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<title>Book carving</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-
-    <link rel="icon" type="image/png" href="favicon.png" />
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#bbdefb" />
+	<link rel="icon" type="image/png" href="favicon.png" />
 	<link href="css/me.css" rel="stylesheet" /> 
 </head>
 
