--- a/hang.html
+++ b/hang.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Handpan</title>
+    <title>Handpan</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-
+    <meta name="theme-color" content="#bbdefb" />
     <link rel="icon" type="image/png" href="favicon.png" />
-	<link href="css/me.css" rel="stylesheet" /> 
-	<meta name="keywords" content="hang handpan music instrument drum" />
-	<meta name="description" content="Some of my favorite Handpan performers" />
+    <link href="css/me.css" rel="stylesheet" /> 
+    <meta name="keywords" content="hang handpan music instrument drum" />
+    <meta name="description" content="Some of my favorite Handpan performers" />
 </head>
 
 <body>
