--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -3,6 +3,9 @@
 <head>
 <title>Crème brûlée recipe</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#bbdefb" />
 	<link href="../../css/me.css" rel="stylesheet" />
 	<meta name="keywords" content="french creme brulee cooking dessert homemade recipe" />
 	<meta name="description" content="Crème brûlée recipe" />
