--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -3,6 +3,9 @@
 <head>
 <title>French desserts recipes</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#bbdefb" />
 	<link href="../../css/me.css" rel="stylesheet" />
 	<meta name="keywords" content="icecream dessert recipe" />
 	<meta name="description" content="Recipes for some of my favorite desserts." />
