--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -3,6 +3,9 @@
 <head>
 <title>My Grandmother's Madeleines recipe</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#bbdefb" />
 	<link href="../../css/me.css" rel="stylesheet" />
 	<meta name="keywords" content="french homemade sweet madeleine cooking dessert tea butter sponge cake recipe" />
 	<meta name="description" content="Madeleines recipe from my Grandmother" />
