--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -3,6 +3,9 @@
 <head>
 <title>Pear cream tart recipe</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#bbdefb" />
 	<link href="../../css/me.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
 	<meta name="keywords" content="cooking dessert recipe pear cream tart french homemade" />
