Small layout tweaks.

--- a/hang.html
+++ b/hang.html
@@ -10,6 +10,18 @@
     <link href="css/me.css" rel="stylesheet" /> 
     <meta name="keywords" content="hang handpan music instrument drum" />
     <meta name="description" content="Some of my favorite Handpan performers" />
+    <style>
+        iframe{
+            height: 315px;
+            width: 560px;
+        }
+        @media only screen and (max-width: 480px) {
+            iframe{
+                height: 168px;
+                width: 300px;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -29,19 +41,19 @@
 
     <div class="cards">
         <div>Davide Swarup at TEDxSalford<br/>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hLvnrjbdXKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/hLvnrjbdXKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div>Hang Massive - Once Again<br/>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xk3BvNLeNgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/xk3BvNLeNgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div>Sam Maher - New York Handpan<br/>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6oremFnbgO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/6oremFnbgO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div>Laura Inserra - Live Improv.<br/>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pWWKsCMLOho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/pWWKsCMLOho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div>David Charrier - Lafa<br/>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Uj-kHy5b5mo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/Uj-kHy5b5mo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <span class="clearer"></span>
