--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </section>
 
 <section id="me" class="c7">
-	<div class="sTitle">Me</div>
+	<span class="sTitle">Me</span>
 	<div class="pad">
 		<div class="me"> 
 			<div>
